# image-product-search-vggnet

./: .gitignore  README.md  cnn_layer_learn.ipynb  pyproject.toml
src/: main.py
src/background_removal/: deepfashion_mask_image_creation.ipynb  segmentation.py  training.py
src/feature_extraction/: extractor.py  image_classification_dataset_generation.ipynb
src/retrieval/: __init__.py  main.py
src/utils/: env_config.py  image.py  image_loader.py  logging_config.py
