[tool.poetry]
name = "image-retrieval"
version = "0.1.0"
description = ""
authors = ["Gaurav Neupane <ngaurav456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
