[tool.poetry]
name = "image-retrieval"
version = "0.1.0"
description = ""
authors = ["Gaurav Neupane <ngaurav456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
python-dotenv = "^1.0.1"
tensorflow = "^2.17.0"
chromadb = "^0.5.5"
notebook = "^7.2.1"
matplotlib = "^3.9.1.post1"
scikit-image = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
